type: <fix> action: <fixed desktop view display window too small>

--- a/style/cv.scss
+++ b/style/cv.scss
@@ -12,6 +12,10 @@
   overflow-y: scroll;
 }
 
+main {
+  display: grid;
+  grid-template-rows: max-content max-content 11vh;
+}
 h1 {
   display: flex;
   justify-content: center;
@@ -29,7 +33,7 @@ h4 {
 }
 .cv-desktop-container {
   width: 80vw;
-  height: 100vh;
+  height: 88vh;
   margin: auto;
 }
 
